# github-stats-prototype

./: .coveragerc  .editorconfig  .gitignore  CHANGELOG.md  Justfile  README.md  index.html  pyproject.toml  sonar-project.properties
.devcontainer/: devcontainer.json  post-build.sh
.github/: dependabot.yml
.github/actions/setup-python/: action.yml
.github/other-configurations/: .linkspector.yml  labeler.yml  labeller.yml  labels.yml
.github/release-please/: release-please-config.json
.github/super-linter-configurations/: .textlintrc
.github/workflows/: code-quality.yml  code-test.yml  codeql-analysis.yml  deploy.yml  pull-request-checks.yml  release-please.yml  release.yml  setup-python.yml  sync-labels.yml
analyser/: analyser.just  main.py  markdown.py  pyproject.toml
analyser/application/: catalogued_repository.py  custom_logging.py  git_actions.py  github_interactions.py  main.py  markdown.py  repository.py
analyser/application/markdown/: markdown.py
analyser/application/markdown/components/: link.py
analyser/application/markdown/tests/: test_markdown.py
analyser/application/pages/: index_page.py  pages.py  repository_page.py
analyser/application/pages/tests/: test_index_page.py  test_pages.py  test_repository_page.py
analyser/application/programming_languages/: __init__.py  language.py  languages.py  programming_languages.py
analyser/application/repository_analysis/: languages.py  prioritised_languages.yml  repository_analysis.py
analyser/application/repository_analysis/tests/: test_languages.py  test_repository_analysis.py
analyser/application/software_lines_of_code/: sloc.py
analyser/application/software_lines_of_code/tests/: test_sloc.py
analyser/application/tests/: test_custom_logging.py  test_git_actions.py  test_github_interactions.py  test_main.py  test_markdown.py
analyser/tests/: test__main__.py  test_main.py  test_markdown.py
dashboard/: astro.config.mjs  dashboard.just  eslint.config.mjs  package-lock.json  package.json
dashboard/src/: env.d.ts
docs/: development-guide.md
github-pages/: index.html
